--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/POS
+spring.datasource.username=sandu
+spring.datasource.password=1234
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
